capsul: remove the wip module from the release.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@238 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,5 @@ recursive-exclude doc/source *.*~
 prune doc/source/*/generated
 # list of files to include in the distribution built by the sdist command
 recursive-include capsul/apps_qt/resources *.ui *.png *.txt *.qrc
+# remove the wip capsul module
+recursive-exclude capsul/wip *
