capsul: add options for gui and core deployment (todo split repo).
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@387 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,6 @@
-include AUTHOR LICENSE MANIFEST.in setup.py README.txt
+include AUTHOR LICENSE MANIFEST.in setup.py README.txt ez_setup.py
 # documentation
 include doc/Makefile 
 recursive-include doc/source *
 recursive-exclude doc/source *.*~
 prune doc/source/*/generated
-# list of files to include in the distribution built by the sdist command
-recursive-include capsul/apps_qt/resources *.ui *.png *.txt *.qrc
-# remove the wip capsul module
-recursive-exclude capsul/wip *
