--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 
 python:
-    - "2.6"
-    - "2.7"
+    - "pypy"
+    - 2.6
+    - 2.7
+    - "2.7_with_system_site_packages"
 
 before_install:
     - sudo apt-get install -qq python-networkx 
