--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,42 @@
+cache:
+    - apt
+
 language: python
 
 python:
+    - 2.6
+    - 2.7
     - "2.7_with_system_site_packages"
 
+env:
+- INSTALL_DEB_DEPENDECIES=true
+- INSTALL_DEB_DEPENDECIES=false
+
 before_install:
-    - sudo apt-get install -qq python-networkx 
-    - sudo apt-get install -qq python-nibabel
-    - sudo apt-get install -qq python-numpy
-    - sudo apt-get install -qq python-scipy
-    - sudo apt-get install -qq python-traits
-    - sudo apt-get install -qq python-nose
-    - sudo apt-get install -qq python-nipype
-    - sudo apt-get install -qq python-coverage
+     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then 
+        wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else 
+        wget http://repo.continuum.io/miniconda/Miniconda3-3.6.0-Linux-x86_64.sh -O miniconda.sh; fi
+    - chmod +x miniconda.sh
+    - ./miniconda.sh -b
+    - export PATH=/home/travis/miniconda/bin:$PATH
+    - if $INSTALL_DEB_DEPENDECIES; then sudo rm -rf /dev/shm; fi
+    - if $INSTALL_DEB_DEPENDECIES; then sudo ln -s /run/shm /dev/shm; fi
+    - if $INSTALL_DEB_DEPENDECIES; then bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh); fi
+    - if $INSTALL_DEB_DEPENDECIES; then travis_retry sudo apt-get install -qq --no-install-recommends fsl afni elastix; fi
+    - if $INSTALL_DEB_DEPENDECIES; then travis_retry sudo apt-get install -qq fsl-atlases; fi
+    - if $INSTALL_DEB_DEPENDECIES; then source /etc/fsl/fsl.sh; fi
 
 install:
-    - pip install numpy
-    - pip install soma-workflow
+    - conda update --yes conda
+    - conda create -n testenv --yes pip python=$TRAVIS_PYTHON_VERSION
+    - source activate testenv
+    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install ordereddict; fi
+    - conda install --yes numpy scipy nose traits networkx dateutil
+    - pip install nibabel --use-mirrors
+    - pip install nose-cov --use-mirrors
+    - pip install nipype --use-mirrors
+    - pip install soma-workflow --use-mirrors
     - python setup.py install
 
 script:
