--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-cache:
-    - apt
-
 language: python
 
 python:
@@ -8,24 +5,13 @@ python:
     - 2.7
     - "2.7_with_system_site_packages"
 
-env:
-- INSTALL_DEB_DEPENDECIES=true
-- INSTALL_DEB_DEPENDECIES=false
-
 before_install:
-     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then 
-        wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else 
-        wget http://repo.continuum.io/miniconda/Miniconda3-3.6.0-Linux-x86_64.sh -O miniconda.sh; fi
+    - sudo apt-get update
+    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.6.0-Linux-x86_64.sh -O miniconda.sh; fi
     - chmod +x miniconda.sh
-    - ./miniconda.sh -b
+    - ./miniconda.sh -b -p $HOME/miniconda
     - export PATH=/home/travis/miniconda/bin:$PATH
-    - if $INSTALL_DEB_DEPENDECIES; then sudo rm -rf /dev/shm; fi
-    - if $INSTALL_DEB_DEPENDECIES; then sudo ln -s /run/shm /dev/shm; fi
-    - if $INSTALL_DEB_DEPENDECIES; then bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh); fi
-    - if $INSTALL_DEB_DEPENDECIES; then travis_retry sudo apt-get install -qq --no-install-recommends fsl afni elastix; fi
-    - if $INSTALL_DEB_DEPENDECIES; then travis_retry sudo apt-get install -qq fsl-atlases; fi
-    - if $INSTALL_DEB_DEPENDECIES; then source /etc/fsl/fsl.sh; fi
+    - hash -r
 
 install:
     - conda update --yes conda
