travis build: removed obsolete --use-mirrors option from pip install commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,13 @@ install:
     - conda install --yes numpy scipy nose traits networkx dateutil
     - svn --non-interactive --username brainvisa --password Soma2009 export  https://bioproj.extra.cea.fr/neurosvn/brainvisa/soma/soma-base/trunk /tmp/soma-base
     - python /tmp/soma-base/setup.py install
-    - pip install argparse --use-mirrors
-    - pip install importlib --use-mirrors
-    - pip install nibabel --use-mirrors
-    - pip install nose-cov --use-mirrors
-    - pip install nipype --use-mirrors
-    - pip install xmltodict --use-mirrors
-    - pip install soma-workflow --use-mirrors
+    - pip install argparse
+    - pip install importlib
+    - pip install nibabel
+    - pip install nose-cov
+    - pip install nipype
+    - pip install xmltodict
+    - pip install soma-workflow
     - python setup.py install
 
 script:
