--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,13 @@ install:
     - source activate testenv
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install ordereddict; fi
     - conda install --yes numpy scipy nose traits networkx dateutil
-    - pip install argparse --use-mirrors
-    - pip install importlib --use-mirrors
-    - pip install nibabel --use-mirrors
-    - pip install nose-cov --use-mirrors
-    - pip install nipype --use-mirrors
-    - pip install xmltodict --use-mirrors
-    - pip install soma-workflow --use-mirrors
+    - pip install argparse
+    - pip install importlib
+    - pip install nibabel
+    - pip install nose-cov
+    - pip install nipype
+    - pip install xmltodict
+    - pip install soma-workflow
     - python setup.py install
 
 script:
