--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
     - conda install --yes numpy scipy nose traits networkx dateutil
     # until we release soma-workflow 2.8
     - git clone https://github.com/neurospin/soma-workflow.git /tmp/soma-workflow
+    - cd /tmp/soma-workflow
     - python /tmp/soma-workflow/setup.py install
     - pip install argparse
     - pip install importlib
