--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,14 @@ install:
     - conda install --yes numpy scipy nose traits networkx dateutil
     # until we release soma-workflow 2.8
     - git clone https://github.com/neurospin/soma-workflow.git /tmp/soma-workflow
-    - cd /tmp/soma-workflow
+    - pushd /tmp/soma-workflow
     - python /tmp/soma-workflow/setup.py install
+    - popd
     - pip install argparse
     - pip install importlib
     - pip install nibabel
     - pip install nose-cov
-    - python -c 'import sys; sys.exit(sys.version_info >= [2, 7])' && pip install nipype || pip install nipype==0.10.0
+    - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || pip install nipype==0.10.0
     - pip install xmltodict
     #- pip install soma-workflow
     - python setup.py install
