--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
     - pip install argparse
     - pip install importlib
     - pip install nose-cov
-    - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype
+    - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install xmltodict
     #- pip install soma-workflow
     - python setup.py install
