travis-ci: install jupyter and nbconvert only for python >= 2.7 because they are not supported on 2.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install importlib; fi
     - pip install nose-cov
     # to test notebooks
-    - pip install jupyter nbconvert
+    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install jupyter nbconvert; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     #- pip install soma-workflow
     - python setup.py install
