--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,9 @@ install:
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     #- pip install soma-workflow
     - python setup.py install
-    #- export CAPSUL_SOURCE_DIR=$PWD
+    - export CAPSUL_SOURCE_DIR=$PWD
+    # don't stay in source directory to actually use the installed capsul
+    - cd ..
 
 script:
     - python -m capsul.test.test_capsul
