--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,13 @@ matrix:
       language: python
       python:
         - 2.6
+    - os: linux
+      language: python
+      python:
         - 2.7
+    - os: linux
+      language: python
+      python:
         - 3.5
 
 before_install:
