--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ install:
     #- svn --non-interactive --username brainvisa --password Soma2009 export  https://bioproj.extra.cea.fr/neurosvn/brainvisa/soma/soma-base/branches/bug_fix /tmp/soma-base
     - git clone https://github.com/populse/soma-base.git /tmp/soma-base
     - python /tmp/soma-base/setup.py install
+    - git clone https://github.com/populse/populse_db.git /tmp/populse_db
+    - python /tmp/populse_db/setup.py install
     # until we release soma-workflow 2.9
     #- git clone https://github.com/neurospin/soma-workflow.git /tmp/soma-workflow
     #- pushd /tmp/soma-workflow
