--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ install:
     #- svn --non-interactive --username brainvisa --password Soma2009 export  https://bioproj.extra.cea.fr/neurosvn/brainvisa/soma/soma-base/branches/bug_fix /tmp/soma-base
     - git clone https://github.com/populse/soma-base.git /tmp/soma-base
     - python /tmp/soma-base/setup.py install
-    - pip install -U setuptools pip
-    - git clone https://github.com/populse/populse_db.git /tmp/populse_db
-    - pushd /tmp/populse_db
-    - PYTHONPATH="/tmp/populse_db/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:$PYTHONPATH" python /tmp/populse_db/setup.py install
-    - popd
+    #- pip install -U setuptools pip
+    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then git clone https://github.com/populse/populse_db.git /tmp/populse_db; fi
+    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pushd /tmp/populse_db; fi
+    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then PYTHONPATH="/tmp/populse_db/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:$PYTHONPATH" python /tmp/populse_db/setup.py install; fi
+    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then popd; fi
     # until we release soma-workflow 2.9
     #- git clone https://github.com/neurospin/soma-workflow.git /tmp/soma-workflow
     #- pushd /tmp/soma-workflow
