--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
     # osx deps
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall --ignore-dependencies python; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
+    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --overwrite freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libpng; fi
