--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ install:
     - pip install codecov;
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
     - python setup.py install
@@ -68,3 +69,16 @@ script:
 
 after_success:
     - codecov
+
+install:
+    - cd doc
+    - make html
+
+deploy:
+  provider: pages
+  githuib-token: $GITHUB_ACCESS_TOKEN
+  target-branch: gh-pages
+  local-dir: doc/build/html
+  on:
+    branch: autodoc
+    condifion: $TRAVIS_PYTHON_VERSION = 2.7
