--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
     - pip install codecov;
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx sphinx-gallery; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
     - python setup.py install
@@ -74,7 +74,8 @@ after_success:
 
 deploy:
   provider: pages
-  github-token: $GITHUB_ACCESS_TOKEN
+  skip_cleanup: true
+  github_token: $GITHUB_ACCESS_TOKEN
   target-branch: gh-pages
   local-dir: doc/build/html
   on:
