--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
 install:
     - python --version
     - pip install numpy six
+    - echo "TRAVIS_OS_NAME:" "$TRAVIS_OS_NAME"
     # - pip install nose
     - if [ ${TRAVIS_PYTHON_VERSION} == "2.6" ]; then pip install "traits==4.6.0"; else pip install traits ;fi
     - if [ ${TRAVIS_PYTHON_VERSION} == "2.6" ]; then pip install "lark-parser==0.6.5" "python-dateutil<2.7" "SQLAlchemy<1.2"; fi
@@ -56,7 +57,7 @@ install:
     - pip install codecov;
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx sphinx-gallery; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx sphinx-gallery nbsphinx PyQt5; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
     - python setup.py install
@@ -66,11 +67,11 @@ install:
     - cd ..
 
 
-script:
-    - coverage run -m capsul.test.test_capsul
+#script:
+    #- coverage run -m capsul.test.test_capsul
 
-after_success:
-    - codecov
+#after_success:
+    #- codecov
 
 deploy:
   provider: pages
