--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ install:
     - pip install codecov;
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx sphinx-gallery nbsphinx; fi
+    - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then pip install sphinx sphinx-gallery nbsphinx; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
     - python setup.py install
