still debugging notebooks, and fixed intersphinx URLs

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,14 +57,14 @@ install:
     - pip install codecov;
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
-    - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then sudo apt-get install pandoc; pip install sphinx sphinx-gallery pandoc nbsphinx PyQt5; fi
+    - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then sudo apt-get install -y pandoc; pip install sphinx sphinx-gallery pandoc nbsphinx PyQt5; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
     - python setup.py install
     - export CAPSUL_SOURCE_DIR=$PWD
     # build doc; set .nojekyll otherwise github.io doesn't copy dirs starting
     # with '_' (such as '_static')
-    - if [[  "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then cd doc && QT_API=pyqt5 make html && touch build/html/.nojekyll && cd ..; fi
+    - if [[  "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then cd doc && QT_API=pyqt5 SOMABASE_INTERSPHINX_URL=http://brainvisa.info/soma-base/sphinx/objects.inv SOMAWORKFLOW_INTERSPHINX_URL= http://brainvisa.info/soma-workflow/sphinx/objects.inv make html && touch build/html/.nojekyll && cd ..; fi
     # don't stay in source directory to actually use the installed capsul
     - cd ..
 
