--- a/.travis.yml
+++ b/.travis.yml
@@ -62,9 +62,12 @@ install:
     - pip install soma-workflow
     - python setup.py install
     - export CAPSUL_SOURCE_DIR=$PWD
+    - export SOMABASE_INTERSPHINX_URL=http://brainvisa.info/soma-base/sphinx/objects.inv
+    - export SOMAWORKFLOW_INTERSPHINX_URL=http://brainvisa.info/soma-workflow/sphinx/objects.inv
+    - export QT_API=pyqt5
     # build doc; set .nojekyll otherwise github.io doesn't copy dirs starting
     # with '_' (such as '_static')
-    - if [[  "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then cd doc && QT_API=pyqt5 SOMABASE_INTERSPHINX_URL=http://brainvisa.info/soma-base/sphinx/objects.inv SOMAWORKFLOW_INTERSPHINX_URL=http://brainvisa.info/soma-workflow/sphinx/objects.inv make html && touch build/html/.nojekyll && cd ..; fi
+    - if [[  "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then cd doc && make html && touch build/html/.nojekyll && cd ..; fi
     # don't stay in source directory to actually use the installed capsul
     - cd ..
 
