enable tests again after now that the doc is working

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,11 +73,10 @@ install:
 
 
 script:
-    - ls
-    #- coverage run -m capsul.test.test_capsul
+    - coverage run -m capsul.test.test_capsul
 
-#after_success:
-    #- codecov
+after_success:
+    - codecov
 
 deploy:
   provider: pages
