--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,6 @@ matrix:
       name: python 2.7
     - os: linux
       language: python
-      name: python 2.6
-      dist: trusty
-      python:
-        - 2.6
-    - os: linux
-      language: python
       name: python 2.7
       python:
         - 2.7
@@ -35,17 +29,13 @@ install:
     - python --version
     - pip install numpy six
     - echo "TRAVIS_OS_NAME:" "$TRAVIS_OS_NAME"
-    # - pip install nose
-    - if [ ${TRAVIS_PYTHON_VERSION} == "2.6" ]; then pip install "traits==4.6.0"; else pip install traits ;fi
-    - if [ ${TRAVIS_PYTHON_VERSION} == "2.6" ]; then pip install "lark-parser==0.6.5" "python-dateutil<2.7" "SQLAlchemy<1.2"; fi
-    #- svn --non-interactive --username brainvisa --password Soma2009 export  https://bioproj.extra.cea.fr/neurosvn/brainvisa/soma/soma-base/branches/bug_fix /tmp/soma-base
     - git clone https://github.com/populse/soma-base.git /tmp/soma-base
     - python /tmp/soma-base/setup.py install
     #- pip install -U setuptools pip
-    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then git clone https://github.com/populse/populse_db.git /tmp/populse_db; fi
-    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pushd /tmp/populse_db; fi
-    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then PYTHONPATH="/tmp/populse_db/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:$PYTHONPATH" python /tmp/populse_db/setup.py install; fi
-    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then popd; fi
+    - git clone https://github.com/populse/populse_db.git /tmp/populse_db
+    - pushd /tmp/populse_db
+    - PYTHONPATH="/tmp/populse_db/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:$PYTHONPATH" python /tmp/populse_db/setup.py install
+    - popd
     # until we release soma-workflow 2.9
     #- git clone https://github.com/neurospin/soma-workflow.git /tmp/soma-workflow
     #- pushd /tmp/soma-workflow
@@ -56,7 +46,7 @@ install:
     #- pip install nose-cov
     - pip install codecov;
     # to test notebooks
-    - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
+    - pip install jupyter nbconvert
     - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then sudo apt-get install -y pandoc graphviz; pip install sphinx sphinx-gallery pandoc nbsphinx PyQt5; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
     - pip install soma-workflow
