--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,16 @@ matrix:
       name: python 3.5
       python:
         - 3.5
+    - os: linux
+      language: python
+      name: python 3.8
+      python:
+        - 3.8
 
 before_install:
     # osx deps
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall --ignore-dependencies python; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install freetype; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --overwrite freetype; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libpng; fi
 
 install:
     - python --version
