Fix test command

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
 
 
 script:
-    - coverage run -m capsul.test.test_capsul
+    - coverage run -m capsul.test
 
 after_success:
     - codecov
