--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
 
     - PYTHON: "C:\\Python27"
     - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python38"
 
 build: off
 
@@ -21,7 +22,7 @@ install:
 
 test_script:
   - "python --version"
-  - "python -m capsul.test.test_capsul"
+  - "python -m capsul.test"
 
 notifications:
   - provider: Email
