switch to soma-workflow/master on github for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ install:
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
     - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.5" ]]; then sudo apt-get install -y pandoc graphviz; pip install sphinx sphinx-gallery pandoc nbsphinx PyQt5; fi
     - python -c 'import sys; sys.exit(0 if sys.version_info >= (2, 7) else 1)' && pip install nipype || echo "testing without nipype."
-    - pip install soma-workflow
+    #- pip install soma-workflow
     - python setup.py install
     - export CAPSUL_SOURCE_DIR=$PWD
     - export SOMABASE_INTERSPHINX_URL=http://brainvisa.info/soma-base/sphinx
