Run pre-commit checks as part of Travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,10 @@ install:
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install importlib; fi
     #- pip install nose-cov
     - pip install codecov;
+    # run code quality checks (skip them on Mac OS because Python 3 is not
+    # available there)
+    - if [[ $TRAVIS_OS_NAME == linux ]]; then pip install pre-commit; fi
+    - if [[ $TRAVIS_OS_NAME == linux ]]; then pre-commit run --all-files; fi
     # to test notebooks
     - if [ ${TRAVIS_PYTHON_VERSION} != "2.6" ]; then pip install jupyter nbconvert; fi
     - if [[ "$TRAVIS_OS_NAME" = "linux" && "$TRAVIS_PYTHON_VERSION" == "3.7" ]]; then sudo apt-get install -y pandoc graphviz; pip install sphinx sphinx-gallery pandoc nbsphinx "PyQt5<5.13"; fi
