--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,8 +22,8 @@ repos:
     -   id: flake8
         name: flake8 under python2
         language_version: python2
-        exclude: ^doc/source/sphinxext/
+        exclude: ^(doc/source|capsul)/sphinxext/
     -   id: flake8
         name: flake8 under python3
         language_version: python3
-        exclude: ^doc/source/sphinxext/
+        exclude: ^(doc/source|capsul)/sphinxext/
