--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,6 @@ environment:
 
     - PYTHON: "C:\\Python27"
     - PYTHON: "C:\\Python35"
-    - PYTHON: "C:\\Python38"
 
 build: off
 
@@ -24,7 +23,7 @@ install:
 
 test_script:
   - "python --version"
-  - "python -m capsul.test"
+  - "python -m capsul.test.test_capsul"
 
 notifications:
   - provider: Email
