--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,16 +10,19 @@ build: off
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - "python -m pip install --upgrade pip"
-  - "pip install numpy six"
-  - "pip install six"
+  - "pip install numpy"
+  - "pip install 'six>=1.13'"
   - "pip install traits"
+  - "pip install python-dateutil"
   #- "pip install soma-workflow"
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-base.git C:\\projects\\soma-base"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-workflow.git C:\\projects\\soma-workflow"
+  - "git clone --depth=50 --branch=master https://github.com/populse/populse_db.git C:\\projects\\populse_db"
   - "SET PYTHONPATH=C:\\projects\\capsul\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-base\\python;%PYTHONPATH%"
   - "SET PYTHONPATH=C:\\projects\\soma-workflow\\python;%PYTHONPATH%"
+  - "SET PYTHONPATH=C:\\projects\\populse_db\\python;%PYTHONPATH%"
 
 test_script:
   - "python --version"
