--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
 
 test_script:
   - "python --version"
-  - "python -m capsul.test.test_capsul"
+  - "python -m capsul.test"
 
 notifications:
   - provider: Email
