--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ install:
   - "pip install six>=1.13"
   - "pip install traits"
   - "pip install python-dateutil"
+  - "pip install nipype"
   #- "pip install soma-workflow"
   - "python setup.py install"
   - "git clone --depth=50 --branch=master https://github.com/populse/soma-base.git C:\\projects\\soma-base"
