--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   include:
     - os: osx
       language: generic
-      name: python 2.7
+      name: python3.7
     - os: linux
       language: python
       name: python 2.7
@@ -20,15 +20,18 @@ before_install:
     # osx deps
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall --ignore-dependencies python; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --overwrite freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libpng; fi
 
 install:
     - python --version
+    - echo "pip:" $(which pip)
     - pip install numpy "six>=1.13"
     - echo "TRAVIS_OS_NAME:" "$TRAVIS_OS_NAME"
+    - echo "TRAVIS_PYTHON_VERSION:" "$TRAVIS_PYTHON_VERSION"
     # - pip install nose
     - git clone https://github.com/populse/soma-base.git /tmp/soma-base
     - python /tmp/soma-base/setup.py install
