--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
+    - echo "I am here"
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --overwrite freetype; fi
     #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libpng; fi
