--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; export PATH="/usr/local/opt/python/libexec/bin:$PATH"; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install freetype; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade freetype; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --overwrite freetype; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libpng; fi
 
