.gitignore: ignore generated Jupyter notebook
Closes: https://github.com/populse/capsul/issues/168

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 *~
 .coverage
 
-# Folders #
-###########
+# Generated documentation #
+###########################
 build/
 /doc/source/*/generated/
+/doc/source/tutorial/capsul_tutorial.ipynb
